2014-05-20  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlrender.c: (gst_ttmlrender_store_layout):
	* src/gstttmlutils.c:
	* src/gstttmlutils.h:
	Support the wrapOption attribute.

2014-05-20  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	(gst_ttml_attribute_parse_length_expression),
	(gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default):
	* src/gstttmlenums.h:
	* src/gstttmlrender.c: (gst_ttmlrender_store_layout),
	(gst_ttmlrender_show_layout), (gst_ttmlrender_render_outline),
	(gst_ttmlrender_show_regions):
	* src/gstttmlutils.c:
	Add support for lineHeight attribute.
	Draw layout lines one by one instead of letting Pango draw the whole layout
	so we can control line spacing.
	Use get_pixel_extents for simplicity.

2014-05-19  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_downstream_negotiation):
	Fix obvious string leak in GST_DEBUG. Doh!

2014-05-19  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_fixate_caps):
	Truncate caps when fixating. I have found some strange cases where I
	got two identical structures with video/x-raw-rgb.

2014-05-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c:
	Flush posible remaining fragments before rendering all layouts.
	This fixes BasicTiming007.

2014-05-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	* src/gstttmlattribute.h:
	* src/gstttmlstate.c:
	* src/gstttmlstate.h:
	* src/gstttmlrender.c:
	Deal with zIndex collisions and the AUTO value.

2014-05-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstate.c: (gst_ttml_state_push_attribute):
	Fix region background color state handling.

2014-05-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_show_regions):